welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:18: error: unclosed string literal
"  for (z <- 1 to 4) {
^PatternPicture:25: error: unclosed string literal
  gauche()"
          ^PatternPicture:18: error: unclosed string literal
"  for (z <- 1 to 4) {
^PatternPicture:18: error: illegal start of statement
"  for (z <- 1 to 4) {
^PatternPicture:25: error: unclosed string literal
  gauche()"
          ^PatternPicture:25: error: ';' expected but something found.
  gauche()"
          ^PatternPicture:29: error: expected class or object definition
def faireCoin(c:Color) {
^PatternPicture:49: error: expected class or object definition
def faireMotif() {
^PatternPicture:56: error: expected class or object definition
def faireLigne(nbColonne : Int) {
^PatternPicture:73: error: Unmatched closing brace '}' ignored here
}
^